[workspace.package]
name = "bend-meta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
  "src/meta/types",
  "src/meta/sled-store",
  "src/meta/protos", "src/meta/stoerr",
]

[workspace.dependencies]
sled = "0.34.7"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.11"
prost = "0.12"
log = "0.4"
derive_more = "0.99"
anyerror = "0.1.12"
byteorder = "1.5"

tonic-build = "0.11"
prost-build = "0.12"

