[package]
name = "meta-sled-store"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meta-types = { path = "../types" }
meta-stoerr = { path = "../stoerr" }
sled.workspace = true
tracing.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile = "3.10"
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
anyerror.workspace = true
byteorder.workspace = true

